Add styles file for navbar.

--- a/src/style.less
+++ b/src/style.less
@@ -1,7 +1,12 @@
+// Application wide styles go here
+
 body {
   background-color: #111;
 }
 
 div {
-  color: #fff
+  color: #fff;
 }
+
+// Imports
+@import 'NavBar/style';
