Improve navigation tab styling.

--- a/src/style.less
+++ b/src/style.less
@@ -2,6 +2,7 @@
 
 html {
 	height: 100%;
+	font-family: 'lato';
 }
 
 body {
@@ -26,8 +27,8 @@ div {
 
 	.legion-page-container {
 		height: 100%;
-    display: flex;
-    justify-content: space-between;
+		display: flex;
+		justify-content: space-between;
 
 		.legion-sidebar-left {
 			flex: 0 0 auto;
@@ -37,7 +38,7 @@ div {
 		}
 
 		div {
-      width: 60%;
+			width: 60%;
 			flex: 0 0 auto;
 		}
 
