--- a/Legion.FrontEnd/src/NavBar/style.less
+++ b/Legion.FrontEnd/src/NavBar/style.less
@@ -1,9 +1,10 @@
 // Navigation Bar styles
+@import '~variables.less';
 
 // TODO: Flesh out styles
 .legion-navbar {
   height: 50px;
-  border-bottom: solid 1px #fff;
+  border-bottom: solid 1px @app-border-color;
   padding-left: 20%;
   display: flex;
   align-items: flex-end;
@@ -11,10 +12,10 @@
   a {
     margin-right: 10px;
     padding: 5px;
-    border-left: solid 1px #fff;
-    border-top: solid 1px #fff;
-    border-right: solid 1px #fff;
-    color: #fff;
+    border-left: solid 1px @app-border-color;
+    border-top: solid 1px @app-border-color;
+    border-right: solid 1px @app-border-color;
+    color: @app-text-color;
     text-decoration: none;
 
     &:hover {
