--- a/Legion.FrontEnd/src/variables.less
+++ b/Legion.FrontEnd/src/variables.less
@@ -1,3 +1,10 @@
 @app-background-color: #222;
 @app-border-color: #777;
 @app-text-color: #eee;
+
+@cal-main-color: #ffffff;
+@cal-text-color: #777;
+@cal-text-color-light: #ccc;
+@cal-border-color: #eee;
+@cal-background-color: #f9f9f9;
+@cal-neutral-color: #fff;
