Rename css class prefixes to "ash".
#38

--- a/Legion.FrontEnd/src/NavBar/style.less
+++ b/Legion.FrontEnd/src/NavBar/style.less
@@ -2,7 +2,7 @@
 @import '~variables.less';
 
 // TODO: Flesh out styles
-.legion-navbar {
+.ash-navbar {
   height: 50px;
   border-bottom: solid 1px @app-border-color;
   padding-left: 20%;
