--- a/Legion.FrontEnd/src/style.less
+++ b/Legion.FrontEnd/src/style.less
@@ -21,30 +21,30 @@ div {
   height: 100%;
 }
 
-.legion-body {
+.ash-body {
   height: 100%;
   display: flex;
   flex-direction: column;
 
-  .legion-page-container {
+  .ash-page-container {
     height: 100%;
     display: flex;
     justify-content: space-between;
 
-    .legion-sidebar-left {
+    .ash-sidebar-left {
       flex: 0 0 auto;
       width: 20%;
       height: 100%;
     }
 
-    .legion-page-content {
+    .ash-page-content {
       flex: 1 0 auto;
       height: 100%;
       border-left: 1px solid @app-border-color;
       border-right: 1px solid @app-border-color;
     }
 
-    .legion-sidebar-right {
+    .ash-sidebar-right {
       flex: 0 0 auto;
       width: 20%;
       height: 100%;
