Add a style normalization file.  Restructure site html to be more symantic.  Restyle the header to fit the design.
#42

--- a/Ash.FrontEnd/src/NavBar/style.less
+++ b/Ash.FrontEnd/src/NavBar/style.less
@@ -4,22 +4,28 @@
 // TODO: Flesh out styles
 .ash-navbar {
   height: 50px;
-  border-bottom: solid 1px @app-border-color;
-  padding-left: 20%;
+  margin-left: 10%;
+  padding-left: 1%;
   display: flex;
   align-items: flex-end;
 
-  a {
+  .ash-tab {
     margin-right: 10px;
     padding: 5px;
+    border-radius: 5px 5px 0 0;
     border-left: solid 1px @app-border-color;
     border-top: solid 1px @app-border-color;
     border-right: solid 1px @app-border-color;
     color: @app-text-color;
     text-decoration: none;
 
-    &:hover {
-      background-color: #444;
+    &:hover,
+    &.ash-selected:hover {
+      background-color: @app-hover-color;
+    }
+
+    &.ash-selected {
+      background-color: @app-hover-color;
     }
   }
 }
