--- a/Ash.FrontEnd/src/variables.less
+++ b/Ash.FrontEnd/src/variables.less
@@ -1,3 +1,7 @@
 @app-background-color: #222;
 @app-border-color: #777;
 @app-text-color: #eee;
+@app-hover-color: #444;
+
+@header-height: 50px;
+@divider-height: 4px;
