Add placeholder for logo.
#42

--- a/Ash.FrontEnd/src/NavBar/style.less
+++ b/Ash.FrontEnd/src/NavBar/style.less
@@ -9,6 +9,18 @@
   display: flex;
   align-items: flex-end;
 
+  .ash-logo {
+    position: fixed;
+    top: 20px;
+    left: 20px;
+    height: 150px;
+    width: 150px;
+    padding: 20px;
+    white-space: pre;
+    color: #000;
+    background-color: #fff;
+  }
+
   .ash-tab {
     padding: 5px 10px;
     border-radius: 5px 5px 0 0;
