Tweak less and folder structure
To better match conventions of this project

--- a/Ash.FrontEnd/src/global/components/style.less
+++ b/Ash.FrontEnd/src/global/components/style.less
@@ -1,15 +1,17 @@
 .ash-section {
-  margin: 10px;
   border-radius: 10px;
-  background-color: #333;
+  background-color: @app-foreground-color;
 
   div {
-    padding: 20px 20px 10px;
+    padding-top: 20px;
+    padding-right: 20px;
+    padding-bottom: 10px;
+    padding-left: 20px;
 
     h1 {
       margin: 0;
       font-size: 36px;
-      font-weight: 380;
+      font-weight: 400;
       padding-bottom: 5px;
     }
 
