Use vh/vw when appropriate instead of %.
#42

--- a/Ash.FrontEnd/src/NavBar/style.less
+++ b/Ash.FrontEnd/src/NavBar/style.less
@@ -3,7 +3,7 @@
 
 .ash-navbar {
   height: 50px;
-  width: calc(90% - @left-gutter-width);
+  width: calc(90vw - @left-gutter-width);
   margin-left: @left-gutter-width;
   padding-left: 1%;
   display: flex;
