--- a/Ash.FrontEnd/src/style.less
+++ b/Ash.FrontEnd/src/style.less
@@ -27,7 +27,7 @@ header {
 }
 
 body {
-  height: 100%;
+  height: 100vh;
   background-color: @app-background-color;
 }
 
@@ -36,7 +36,7 @@ div {
 }
 
 #app {
-  height: 100%;
+  height: 100vh;
 }
 
 .ash-divider {
