--- a/Ash.FrontEnd/src/style.less
+++ b/Ash.FrontEnd/src/style.less
@@ -48,6 +48,7 @@ div {
   margin: 0;
   border: none;
   background-color: @app-border-color;
+  z-index: 11; // bring in front of nav bar
 }
 
 .ash-main {
