--- a/Ash.FrontEnd/src/variables.less
+++ b/Ash.FrontEnd/src/variables.less
@@ -8,3 +8,10 @@
 @divider-height: 4px;
 
 @left-gutter-width: 190px;
+
+@cal-main-color: #ffffff;
+@cal-text-color: #777;
+@cal-text-color-light: #ccc;
+@cal-border-color: #eee;
+@cal-background-color: #f9f9f9;
+@cal-neutral-color: #fff;
