Rename less variables file to vars.less

--- a/src/Ash.FrontEnd/src/js/style.less
+++ b/src/Ash.FrontEnd/src/js/style.less
@@ -1,7 +1,7 @@
 @import '~normalize.less';
 
 // Application wide styles go here
-@import '~variables.less';
+@import '~vars.less';
 
 html {
   font-family: 'lato';
