--- a/client/src/js/style.less
+++ b/client/src/js/style.less
@@ -59,6 +59,6 @@ div {
 }
 
 // Imports
-@import 'NavBar/style';
-@import 'events/EventsCalendar/style';
-@import 'global/components/style';
+@import 'navigation/style';
+@import 'events/eventsCalendar/style';
+@import 'components/style';
