--- a/client/src/js/style.less
+++ b/client/src/js/style.less
@@ -1,8 +1,7 @@
 @import '~normalize.less';
-
-// Application wide styles go here
 @import '~vars.less';
 
+// Application wide styles go here
 html {
   font-family: 'lato';
   -webkit-box-sizing: border-box;
@@ -33,6 +32,12 @@ body {
 
 div {
   color: @app-text-color;
+}
+
+h1 {
+  font-size: 36px;
+  font-weight: 400;
+  border-bottom: 2px solid @app-foreground-color;
 }
 
 #app {
