--- a/client/src/js/components/SectionTile/style.scss
+++ b/client/src/js/components/SectionTile/style.scss
@@ -2,7 +2,7 @@
   margin: 16px 0;
   padding: 20px 20px 10px 20px;
   border-radius: 10px;
-  background-color: @app-foreground-color;
+  background-color: $app-foreground-color;
   position: relative;
 
   .ash-tile-header {
