--- a/client/src/js/style.scss
+++ b/client/src/js/style.scss
@@ -1,9 +1,72 @@
 @import 'normalize.scss';
 @import 'vars.scss';
 
+// Fonts
+// Self-hosting fonts in case user doesn't have them
+@font-face {
+  font-family: Lato;
+  font-style: normal;
+  font-weight: 100;
+  src: url('../font/Lato-Thin.ttf');
+}
+@font-face {
+  font-family: Lato;
+  font-style: italic;
+  font-weight: 100;
+  src: url('../font/Lato-ThinItalic.ttf');
+}
+@font-face {
+  font-family: Lato;
+  font-style: normal;
+  font-weight: 300;
+  src: url('../font/Lato-Light.ttf');
+}
+@font-face {
+  font-family: Lato;
+  font-style: italic;
+  font-weight: 300;
+  src: url('../font/Lato-LightItalic.ttf');
+}
+@font-face {
+  font-family: Lato;
+  font-style: normal;
+  font-weight: 400;
+  src: url('../font/Lato-Regular.ttf');
+}
+@font-face {
+  font-family: Lato;
+  font-style: italic;
+  font-weight: 400;
+  src: url('../font/Lato-Italic.ttf');
+}
+@font-face {
+  font-family: Lato;
+  font-style: normal;
+  font-weight: 700;
+  src: url('../font/Lato-Bold.ttf');
+}
+@font-face {
+  font-family: Lato;
+  font-style: italic;
+  font-weight: 700;
+  src: url('../font/Lato-BoldItalic.ttf');
+}
+@font-face {
+  font-family: Lato;
+  font-style: normal;
+  font-weight: 900;
+  src: url('../font/Lato-Black.ttf');
+}
+@font-face {
+  font-family: Lato;
+  font-style: italic;
+  font-weight: 900;
+  src: url('../font/Lato-BlackItalic.ttf');
+}
+
 // Application wide styles go here
 html {
-  font-family: 'lato';
+  font-family: Lato;
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
   box-sizing: border-box;
